syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Presentation";

package library;

service Library {
	rpc GetBookById (GetBookByIdRequest) returns (GetBookByIdReply);
	rpc GetBookAvailability (GetBookAvailabilityRequest) returns (GetBookAvailabilityReply);
	rpc GetMostBorrowedBooks (GetMostBorrowedBooksRequest) returns (GetMostBorrowedBooksReply);
	rpc GetUsersWithMostRents (GetUsersWithMostRentsRequest) returns (GetUsersWithMostRentsReply);
}

message GetBookByIdRequest {
	int32 book_id = 1;
}

message GetBookAvailabilityRequest {
	int32 book_id = 1;
}

message GetMostBorrowedBooksRequest {
	int32 top_range = 1;
}

message GetUsersWithMostRentsRequest {
	int32 top_range = 1;
	google.protobuf.Timestamp start_time = 2;
	google.protobuf.Timestamp end_time = 3;
}

message GetBookByIdReply {
	Book book = 1;
}

message GetBookAvailabilityReply {
	int32 book_id = 1;
	string name = 2;
	int32 borrowed = 3;
	int32 available = 4;
}

message GetMostBorrowedBooksReply {
	repeated Book books = 1;
}

message GetUsersWithMostRentsReply {
	repeated User users = 1;
}

message Book {
	int32 book_id = 1;
	string name = 2;
	int32 pages = 3;
	int32 copies = 4;
}

message User {
	int32 UserId = 1;
	string FirstName = 2;
	string LastName = 3;
	google.protobuf.StringValue email = 4;
	int32 rents = 5;
}